--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    width: 1089px;
+    margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
 }
+.header{
+    margin-top: 17px;
+}
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.menuItem{
+    font-size: 24px;
+    color: #003399;
+    margin-left: 30px;
+}
+.menu{
+}
+.line{
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    width: 790px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+.zero{
+    color: #F27C0F;
+    font-size: 288px;
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.buttons{
+    display: flex;
+    justify-content: center;
+}
+.btn{
+    width: 200px;
+    height: 58px;
+    border: 0;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 24px;
+    padding: 15px 39px;
+}
+.btn1{
+    color: white;
+    background-color: #003399;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.btn2{
+    color: white;
+    background-color: #F27C0F;
+    margin-left: 55px;
+    margin-right: 55px;
+
+}
+.footer{
+    margin: 0 auto;
+    margin-top: 257px;
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    line-height: 19px;
+
+}
+.footerMenu{
+    display: flex;
+}
+.forPartners{
+    margin-left: 31px;
+    margin-right: 30px;
+
+}
+.devs{
+
+    margin-right: 30px;
+}
+.copy{
+    margin-left: 133px;
 }
